# trading_agent

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
cli/: main.py
integration/: INTEGRATION_COMPLETE.md  TESTING_GUIDE.md  WHATS_NEW.md  __init__.py  agent_stock_screener.py  architecture_diagram.py  demo_training_with_explanations.py  demo_with_explanations.py  quick_test.py  smartfolio_explainer.py  test_master_ticker_run.py  utils.py
integration/reports_quick_test/: step_000001_BHARTIARTL.NS.md  step_000001_HDFCBANK.NS.md  step_000001_HINDUNILVR.NS.md  step_000001_ICICIBANK.NS.md  step_000001_INFY.NS.md  step_000001_RELIANCE.NS.md  step_000001_SBIN.NS.md  step_000001_TCS.NS.md  step_000002_BHARTIARTL.NS.md  step_000002_HDFCBANK.NS.md  step_000002_HINDUNILVR.NS.md  step_000002_ICICIBANK.NS.md  step_000002_INFY.NS.md  step_000002_RELIANCE.NS.md  step_000002_SBIN.NS.md  step_000002_TCS.NS.md  step_000003_BHARTIARTL.NS.md  step_000003_HDFCBANK.NS.md  step_000003_HINDUNILVR.NS.md  step_000003_ICICIBANK.NS.md  step_000003_INFY.NS.md  step_000003_RELIANCE.NS.md  step_000003_SBIN.NS.md  step_000003_TCS.NS.md
tradingagents/: combined_weight_agent.py  default_config.py  fundamental_agent.py  llm_client.py  news_agent.py  news_weight_agent.py
